# Scalene

./: .env.example  .gitignore  Makefile  README.md  Scalene BRD.md  pyproject.toml  scalene_policy.yaml  task.md  url-malware-checking.md
.claude/: settings.json
.claude/skills/: bloop  bob  bob-protocol  bob-tools  chat  cypher  judge  linter  make  make-discover  morpheus  mouse  neo  oracle  personas  render  smith  sprint  tank  test-runner  trin  via
.githooks/: pre-commit
agents/: CHAT.md  DOCUMENTATION_INDEX.md
agents/bob.docs/: context.md  current_task.md  next_steps.md
agents/chat_archive/: CHAT-ARCHIVE-20260710.md  CHAT-ARCHIVE-20260715.md  CHAT-ARCHIVE-20260718.md  CHAT-ARCHIVE-20260720.md  CHAT-ARCHIVE-20260721.md  CHAT-ARCHIVE-20260722.md
agents/cypher.docs/: context.md  current_task.md  e15_retro_backlog.md  e15_scanner_sprint_req.md  e16_retro_backlog.md  next_steps.md
agents/morpheus.docs/: BACKLOG.md  context.md  current_task.md  e15_phase1_review.md  e15_phase2_review.md  e15_phase3_review.md  e15_phase4_correction_review.md  e15_phase4_review.md  e15_plan_review.md  next_steps.md  phase1_review.md  phase2_latency_finding.md  proposal_per_resource_mode.md
agents/mouse.docs/: context.md  current_task.md  next_steps.md
agents/neo.docs/: context.md  current_task.md  e15_phase1_notes.md  e15_phase2_notes.md  e15_phase3_notes.md  e15_phase4_correction_notes.md  e15_phase4_notes.md  next_steps.md  phase3_handoff.md  phase4_handoff.md  phase5_e16_notes.md
agents/oracle.docs/: context.md  current_task.md  e10_story_staleness_flag.md  lessons.md  next_steps.md  state_save_20260722.md
agents/smith.docs/: context.md  current_task.md  e11_gate1_review.md  e11_gate2_review.md  e14_cli_ux_review.md  e14_gate1_review.md  e14_gate2_review.md  e14_gate_phase2.md  e15_gate1_review.md  e15_gate2_review.md  e15_phase4_correction_gate.md  e15_phase4_gate.md  e15_sprint_close_e2e.md  e16_gate1_review.md  e16_gate2_review.md  e16_onboarding_tui_consult.md  e16_phase5_gate.md  e16_sprint_close_e2e.md  gate1_sprint3_review.md  gate1_sprint4_review.md  gate2_sprint3_review.md  gate2_sprint4_review.md  next_steps.md  phase1_gate.md  phase5_bug_last_scanned_truncation.md  trace_eval_20260710.md  trace_eval_session.md
agents/tank.docs/: context.md  current_task.md  e15_phase3_recheck.md  e15_phase3_review.md  next_steps.md
agents/tools/: mkf.py
agents/trin.docs/: context.md  current_task.md  e15_phase1_uat.md  e15_phase2_uat.md  e15_phase3_uat.md  next_steps.md  (+6 more)
demo/: run_demo.py
docs/: ARCHITECTURE.md  GETTING_STARTED.md  MONITOR_GUIDE.md  PRD.md  SETUP.md  STORY_TRACEABILITY.md  USER_GUIDE.md  USER_STORIES.md  generate_monitor_screenshots.py
tests/: _env_guards.py  fixtures_custom_scanner.py  test_architecture_docs.py  test_cli.py  test_demo.py  test_getting_started_docs.py  test_hook_adapter.py  test_install_hooks.py  test_masking.py  test_monitor_app.py  test_monitor_cli.py  test_monitor_data.py  test_onboard.py  test_onboard_suggestion_e2e.py  test_performance.py  test_policy_config.py  test_reputation.py  test_resource_verifier.py  test_scan_cache.py  test_scanner.py  test_secrets_scan.py  test_setup_docs.py  test_subprocess_isolation.py  test_taint_state.py  test_user_guide_docs.py
(+28 files in other folders)
