[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scalene-guard"
version = "0.1.0"
description = "Provenance-based DLP layer for AI coding agents"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jsonpath-ng>=1.6",
    "filelock>=3.13",
]

[project.scripts]
scalene-guard = "scalene.cli:main"
scalene = "scalene.main_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
