[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scalene-guard"
version = "0.1.0"
description = "Provenance-based DLP layer for AI coding agents"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jsonpath-ng>=1.6",
    "filelock>=3.13",
    "detect-secrets>=1.5.0",
]

[project.optional-dependencies]
# docs/ARCHITECTURE.md sec 11.1: the `scalene monitor` TUI's dependency, kept
# out of the hard `dependencies` list so the hot-path hook adapter
# (`scalene-guard`) never imports a TUI framework it doesn't use.
monitor = ["textual>=8.0"]
# Agent tooling only (agents/tools/trace_annotate.py) — never imported by
# src/scalene, kept out of the shipped package's dependency footprint.
dev = ["jinja2>=3.0"]

[project.scripts]
scalene-guard = "scalene.cli:main"
scalene = "scalene.main_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
